--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet">
+
 <title>Portfolio Fabiana Lopes</title>
+
+<style> 
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
+</style>
 </head>
 <body>
-<h1>Fabiana Lopes Santana</h1>
+<h1 style="color: #0a7e51;">Fabiana Lopes Santana</h1>
 <img src="./eeu.jpg" width="300px" id="imgpos"/>
 <p>Estudante de Desenvolvimento Web na <strong>Trybe</strong> | <em>Designer de Interiores</em> |
     Especialista em Iluminação pela Instituição IPOG | Apaixonada por tecnologia </p>
@@ -37,7 +48,10 @@
  <li>Sou comunicativa</li>   
  <br>
  <br>
- <li>Sou proativa</li>
+ <li>Sou prestativa</li>
+ <br>
+ <br>
+ <li>Disposta para trabalhar</li>
 </ol>
 </body>
 </html>
