--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Portfolio Fabiana Lopes</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Fabiana Lopes Santana</h1>
-<img src="./eeu.jpg" width="300px" id="imgpos"/>
-<p>Estudante de Desenvolvimento Web na <strong>Trybe</strong> | <em>Designer de Interiores</em> |
+<h1 id="meunome">Fabiana Lopes Santana</h1>
+<div>
+<img src="./eeu.jpg" width="300px" id="minha-foto"/>
+<div id="image-container">
+<p id="texto">Estudante de Desenvolvimento Web na <strong>Trybe</strong> | <em>Designer de Interiores</em> |
     Especialista em Iluminação pela Instituição IPOG | Apaixonada por tecnologia </p>
+</div>
+</div>
 <a href="https://www.linkedin.com/in/fabiana-lopes-97015b94"target="_blank">Meu Perfil no LinkedIn</a>
 <br>
 <br>
